--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav-wrapper container">
             <a href="/"><img src="images/logo.svg" alt=""></a>
             <ul class="nav-menu">
-                <li>
+                <li class="menu-item">
                     <button class="btn-features">Features <img src="images/icon-arrow-down.svg" alt=""></button>
                     <ul class="features-dropdown">
                         <li>
@@ -44,7 +44,7 @@
                         
                     </ul>
                 </li>
-                <li>
+                <li class="menu-item">
                     <button class="btn-company">Company <img src="images/icon-arrow-down.svg" alt=""></button>
                     <ul class="company-dropdown">
                         <li>History</li>
@@ -52,8 +52,8 @@
                         <li>Blog</li>
                     </ul>
                 </li>
-                <li>Careers</li>
-                <li>About</li>
+                <li class="menu-item">Careers</li>
+                <li class="menu-item">About</li>
             </ul>
             <ul class="nav-login">
                 <li class="btn-login">Login</li>
